Use an existing DOM element for all ledger-web views

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,3 +8,4 @@
     %script{ src: javascript_path('application') }
     %script{ src: "https://github.com/livereload/livereload-js/raw/master/dist/livereload.js?host=localhost" }
   %body
+    #ledger_web
