--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,8 @@
 %html
   %head
     %title Ledger Web
-    %meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'}
+    %meta{'name' => 'viewport', 'content' => 'initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width'}
+    %meta{'name' => 'viewport', 'content' => 'initial-scale=1.0,user-scalable=no,maximum-scale=1', 'media' => '(device-height: 568px)'}
     %meta{'name' => 'apple-mobile-web-app-capable', 'content' => 'yes'}
     %link{ rel: "stylesheet", type: "text/css", href: stylesheet_path('application') }
     %script{ src: javascript_path('application') }
