Move views into app folder

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -10,4 +10,4 @@
     != js :app
     %script{ src: "https://github.com/livereload/livereload-js/raw/master/dist/livereload.js?host=localhost" }
   %body
-    #ledger_web
+    #ledger-web.show-menu
