Load report definitions from ledger-web.yml

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -9,5 +9,7 @@
     != css :app, :media => 'screen'
     != js :app
     %script{ src: "https://github.com/livereload/livereload-js/raw/master/dist/livereload.js?host=localhost" }
+    :javascript
+      REPORTS = #{@reports.to_json}
   %body
     #ledger-web.show-menu
