--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -43,9 +43,21 @@ body {
 
       ul.reports {
         li {
+          position: relative;
           border-bottom: 1px solid rgba($grey4, 0.1);
           line-height: 2.5em;
           padding-left: 1em;
+
+          i {
+            position: absolute;
+            width: 1.25em;
+            line-height: 2.5em;
+            text-align: center;
+          }
+
+          span {
+            margin-left: 1.5em;
+          }
 
           &:last-child {
             border: 0;
