--- a/app/views/menu/report_link.jst.haml
+++ b/app/views/menu/report_link.jst.haml
@@ -1,2 +1,3 @@
 %li{ 'data-report': report.id, 'class': toClassName(report.title) }
-  = report.title
+  %i{ class: "fa fa-#{report.icon}" }
+  %span.title= report.title
