--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -64,7 +64,8 @@ body {
           }
 
           span {
-            margin-left: 1.5em;
+            margin-left: 2.5em;
+            font-size: 0.8em;
           }
 
           &:last-child {
