Add todo comment to remember tab count limit

--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -134,6 +134,7 @@ body {
           }
         }
 
+        // TODO: allow more than two tabs
         .tabs {
           @include position(absolute, 0px 0px 0 0px);
           height: $tab-height;
