Scroll reports only
Tab panels should not be overlapped by the scrollbars.

--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -118,7 +118,6 @@ body {
 
       .report-content {
         @include position(absolute, $nav-height 0px 0px 0px);
-        overflow-y: scroll;
 
         &.tab-0 {
           .tabs .active-indicator { left: 0px; }
@@ -163,35 +162,39 @@ body {
 
           .tab-layer {
             @include position(absolute, 0px 0px 0px 0px);
-            overflow-y: scroll;
           }
         }
 
-        .balance-report .balance-text {
-          .account {
-            @include clearfix;
-            margin: 0.5em 0;
+        .balance-report {
+          @include position(absolute, 0px 0px 0px 0px);
+          overflow-y: auto;
 
-            &.depth-1 {
-              font-weight: 400;
-            }
+          .balance-text {
+            .account {
+              @include clearfix;
+              margin: 0.5em 0;
 
-            .totals {
-              float: left;
-              width: 40%;
-              text-align: right;
-
-              .total {
-                .amount, .commodity { display: inline-block; }
-                .commodity { margin-left: 0.8em; }
-
-                &.neg { color: #f04040; }
-                &.pos {}
+              &.depth-1 {
+                font-weight: 400;
               }
-            }
-            .title {
-              float: right;
-              width: 60%;
+
+              .totals {
+                float: left;
+                width: 40%;
+                text-align: right;
+
+                .total {
+                  .amount, .commodity { display: inline-block; }
+                  .commodity { margin-left: 0.8em; }
+
+                  &.neg { color: #f04040; }
+                  &.pos {}
+                }
+              }
+              .title {
+                float: right;
+                width: 60%;
+              }
             }
           }
         }
