Format transaction date in transactions view

--- a/app/views/report/transactions/transaction.jst.haml
+++ b/app/views/report/transactions/transaction.jst.haml
@@ -1,5 +1,5 @@
 .info
   %span.collapsible-indicator
-  %span.date= transaction.date
+  %span.date= dateAsString(transaction.date)
   %span.payee= transaction.payee
 .posts
