--- a/app/views/report/transactions/transaction.jst.haml
+++ b/app/views/report/transactions/transaction.jst.haml
@@ -2,4 +2,5 @@
   %span.collapsible-indicator
   %span.date= dateAsString(transaction.date)
   %span.payee= transaction.payee
+  %span.effect= effectString(effect)
 .posts
