Add formatting function for currencies

--- a/app/views/report/transactions/post.jst.haml
+++ b/app/views/report/transactions/post.jst.haml
@@ -1,4 +1,4 @@
 %span.account= shortenAccountName(post.account)
 %div{ class: "amount #{negPosClass(post.amount)}" }
-  %span.value= post.amount
+  %span.value= formatCurrency(post.amount)
   %span.commodity= post.commodity
