--- a/app/views/report/visualization/balance_text/account.jst.haml
+++ b/app/views/report/visualization/balance_text/account.jst.haml
@@ -2,7 +2,7 @@
   .totals
     :each total in account.totals
       %div{ class: "total #{toClassName(total.commodity)} #{negPosClass(total.amount)}" }
-        .amount= total.amount
+        .amount= formatCurrency(total.amount)
         .commodity= total.commodity
   .title{ style: "padding-left: #{account.depth * 20}px;" }
     = account.name
